# Calgary-Hacks-2024

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
discoveryyc/: App.js  app.json  package-lock.json  package.json
discoveryyc/components/: BottomBar.js  CustomButton.js  Item.js  Styles.js  TopBar.js
discoveryyc/public/: manifest.json
discoveryyc/screens/: CardInfo.js  HomeScreen.js  LoginScreen.js  MapScreen.js  MenuScreen.js  Rewards.js  RewardsScreen.js
discoveryyc/src/: App.js  Theme.js
discoveryyc/src/Components/: BottomBar.js  TopBar.js  locationBox.js
discoveryyc/src/pages/: homePage.js  menuPage.js
keys/: cert.pem  key.pem
src/: lib.rs  main.rs
src/api/: mod.rs  site_api.rs  user_api.rs
src/models/: mod.rs  site_model.rs  user_model.rs
src/mongoapi/: mod.rs  mongo_sites.rs  mongo_users.rs
